--- a/2014.html
+++ b/2014.html
@@ -1,11 +1,11 @@
-ï»¿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2016-08-01@15:08:22 TMZ" />
+<meta http-equiv="last-modified" content="2018-11-18@15:07:22 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -20,105 +20,97 @@
 
 <body>
 
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li class="dropdown">
+            <a href="#"
+               class="dropbtn">Archives</a>
+            <div class="dropdown-content">
+                <a href="index.html">2018</a>
+                <a href="2017.html">2017</a>
+                <a href="2016.html">2016</a>
+                <a href="2015.html">2015</a>
+                <a href="2014.html">2014</a>
+                <a href="2013.html">2013</a>
+                <a href="2012.html">2012</a>
+                <a href="2011.html">2011</a>
+                <a href="2010.html">2010</a>
+                <a href="2009.html">2009</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a href="#"
+               class="dropbtn">Transcripts</a>
+            <div class="dropdown-content">
+                <a href="#">Wednesday Q&A Channelings</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a href="#"
+               class="dropbtn">Topics</a>
+            <div class="dropdown-content">
+                <a href="0000.html">How The Elohim Created The Universe</a>
+                <a href="#">The Law Of One</a>
+                <a href="#">Jesus</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a href="#"
+               class="dropbtn">Links</a>
+            <div class="dropdown-content">
+                <a href="http://wholeplanethealing.com/">Whole Planet Healing</a>
+                <a href="0999.html">Conference Call Schedule</a>
+            </div>
+        </li>
+
+        <li class="dropdown">
+            <a href="#"
+               class="dropbtn">Store</a>
+            <div class="dropdown-content">
+                <a href="http://wellness-energy-products.com/">Products to help support our work</a>
+            </div>
+        </li>
+    </ul>
+
 	
-<ul><li><a href="index.html">Home</a></li>
-			<li class="dropdown">
-            <a href="#"
-        class="dropbtn">Archives</a>
-            <div class="dropdown-content">
-            <a href="index.html">2018</a>
-            <a href="2017.html">2017</a>
-            <a href="2016.html">2016</a>
-			<a href="2015.html">2015</a>
-            <a href="2014.html">2014</a>
-			<a href="2013.html">2013</a>
-			<a href="2012.html">2012</a>
-			<a href="2011.html">2011</a>
-			<a href="2010.html">2010</a>
-			<a href="2009.html">2009</a>
-            </div>
-            </li>
-
-            <li class="dropdown">
-            <a href="#"
-        class="dropbtn">Transcripts</a>
-            <div class="dropdown-content">
-            <a href="#">Wednesday Q&A Channelings</a>
-            </div>
-            </li>
-
-            <li class="dropdown">
-            <a href="#"
-        class="dropbtn">Topics</a>
-            <div class="dropdown-content">
-            <a href="0000.html">How The Elohim Created The Universe</a>
-            <a href="#">The Law Of One</a>
-            <a href="#">Jesus</a>
-            </div>
-            </li>
-
-            <li class="dropdown">
-            <a href="#"
-        class="dropbtn">Links</a>
-            <div class="dropdown-content">
-            <a href="http://wholeplanethealing.com/">Whole Planet Healing</a>
-            <a href="0999.html">Conference Call Schedule</a>
-            </div>
-            </li>
-			
-            <li class="dropdown">
-            <a href="#"
-        class="dropbtn">Store</a>
-            <div class="dropdown-content">
-            <a href="http://wellness-energy-products.com/">Products to help support our work</a>
-            </div>
-            </li>
-		</ul>
-	
-
 	<div id="xout">
-		<img src="images/logo.jpg" alt="_" width="800" height="95" /> 
+		<img src="images/logo.jpg" alt="_" width="848" height="95" /> 
 	</div>
 
 <div id="cout">
-
-<td>Last Updated :
-<script language="JavaScript">
-    var x = new Date(document.lastModified);
-    document.write(x);
-</script>
-</td>
-
+<td>Last Updated; November 18, 2018</td>
 <br>
 <br>
 <h5>
 <img src="images/m.png" /> = Wherever you see this icon, it indicates that a transcript is available for that particular session. Click on the icon to access the transcript.
 </h5>
 <br>
-</div>
-                       
+</div>                       
 
 <div id="xout">
 January <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/bc6368122835496c">Wed Q/A Call_2014-01-01.mp3 - <span>Questions and Answers</span></a></h2>
-<h2><a href="t/2014-01-05.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/014fbefcc0ae47ef">Sun_Gridhealing_2014-01-05.mp3 - <span>Fukishima Updates and Planetary Healing</span></a></h2>
-<h2><a href="t/2014-01-06.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/eb1a75531b9a4050">Mon BBS Call_2014-01-06.mp3 - <span>Listen to the Elohim Live</span></a></h2>
+<h2><a href="t/2014-01-05.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/014fbefcc0ae47ef">Sun_Gridhealing_2014-01-05.mp3 - <span>Fukishima Updates and Planetary Healing</span></a></h2>
+<h2><a href="t/2014-01-06.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/eb1a75531b9a4050">Mon BBS Call_2014-01-06.mp3 - <span>Listen to the Elohim Live</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/c7174200b418430d">Wed Q/A Call_2014-01-08.mp3 - <span>What is Comet Ison and How Will it Influence Us?</span></a></h2>
-<h2><a href="t/2014-01-12.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/306fa54331534fdb">Sun_Gridhealing_2014-01-12.mp3 - <span>You are Your Own Home</span></a></h2>
+<h2><a href="t/2014-01-12.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/306fa54331534fdb">Sun_Gridhealing_2014-01-12.mp3 - <span>You are Your Own Home</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/b293598b1a7e41cb">Mon BBS Call_2014-01-13.mp3 - <span>Terry Brown and Carla Rueckert are interviewed</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/166ae9f42ff54867">Wed Q/A Call_2014-01-15.mp3 - <span>Questions and Answers</span></a></h2>
-<h2><a href="t/2014-01-19.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/f4c592355fdc4d43">Sun_Gridhealing_2014-01-19.mp3 - <span>Sunday Grid Healing</span></a></h2>
+<h2><a href="t/2014-01-19.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/f4c592355fdc4d43">Sun_Gridhealing_2014-01-19.mp3 - <span>Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/14b693381d94470f">Mon BBS Call_2014-01-20.mp3 - <span>Listen in - Conversation with Elohim probably</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/b83f301b200d461b">Wed Q/A Call_2014-01-22.mp3 - <span>Wednesday Questions and Answers call</span></a></h2>
-<h2><a href="t/2014-01-26.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/c3f6aadfe7d54325">Sun_Gridhealing_2014-01-26.mp3 - <span>Sunday Planetary Healing with guest Carla Rueckert</span></a></h2>
-<h2><a href="t/2014-01-27.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/6078c986d10d48a0">Mon BBS Call_2014-01-27.mp3 - <span>How the Elohim Created the Universe Continued</span></a></h2>
+<h2><a href="t/2014-01-26.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/c3f6aadfe7d54325">Sun_Gridhealing_2014-01-26.mp3 - <span>Sunday Planetary Healing with guest Carla Rueckert</span></a></h2>
+<h2><a href="t/2014-01-27.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/6078c986d10d48a0">Mon BBS Call_2014-01-27.mp3 - <span>How the Elohim Created the Universe Continued</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/2cf3dd1362d745c3">Wed Q/A Call_2014-01-29.mp3 - <span>Questions From You - How Do I heal My Physical Pain?</span></a></h2>
 </div>
 
 <div id="xout">
 February <br> <br>
-<h2><a href="t/2014-02-02.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/6d42ee7715e64c06">Sun_Gridhealing_2014-02-02.mp3 - <span>Sunday Planetary Healing</span></a></h2>
-<h2><a href="t/2014-02-03.html" target=ï¿½_blankï¿½><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/b2cada826ae1465e">Mon BBS Call_2014-02-03.mp3 - <span>How the Elohim Created the Universe Ongoing series</span></a></h2>
+<h2><a href="t/2014-02-02.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/6d42ee7715e64c06">Sun_Gridhealing_2014-02-02.mp3 - <span>Sunday Planetary Healing</span></a></h2>
+<h2><a href="t/2014-02-03.html" target=”_blank”><img src="images/m.png"/></a><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/b2cada826ae1465e">Mon BBS Call_2014-02-03.mp3 - <span>How the Elohim Created the Universe Ongoing series</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/5820e15c3a684026">Wed Q/A Call_2014-02-05.mp3 - <span>Questions From You - Does Past Life Regression Work?</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/7c2b9f0829da4ac5">Sun_Gridhealing_2014-02-09.mp3 - <span>Sunday Planetary Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/h-s/20140101/6c230755490540f8">Mon BBS Call_2014-02-10.mp3 - <span>What is DNA Activation?</span></a></h2>
@@ -316,7 +308,7 @@ December <br> <br>
 		                                   var year = today.getFullYear()
 		                                   document.write(year)
 					       </script>
-                 Intelligent Infinity/Wynn Free. All rights reserved. Design by <a href="http://www.freecsstemplates.org/">FCT</a>
+                 Intelligent Infinity/Wynn Free. All rights reserved.</a> Design by <a href="http://www.freecsstemplates.org/">FCT</a>
                 </p>
 	</div>
 
