--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2018-11-18@15:07:08 TMZ" />
+<meta http-equiv="last-modified" content="2018-11-18@19:08:36 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -397,7 +397,32 @@ November <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/CNbTAM9u9k">Sun_Gridhealing_2018-11-11.mp3 - <span>Sunday Planetary Healing:Get On the Healing List</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/9qZEN0Ho9z">Mon BBS Call_2018-11-12.mp3 - <span>BBS Call</span></a></h2>
 </div>
-﻿
+<center>
+        <br /><br />
+        <a href="https://www.e-junkie.com/ecom/gb.php?c=cart&i=157793&cl=36747&ejc=2" target="_blank"><img src="images/donate.gif" /></a>
+        <br /><br />
+
+        <!-- hitwebcounter Code START -->
+        <a href="http://www.hitwebcounter.com" target="_blank">
+            <img src="http://hitwebcounter.com/counter/counter.php?page=4590579&style=0025&nbdigits=7&type=page&initCount=0" title="Black Web Counter" Alt="Black Web Counter" border="0" />
+        </a><br />
+        <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com/" title="http://www.hitwebcounter.com"
+                                     target="_blank" style="font-family: Geneva, Arial, Helvetica, sans-serif;
+font-size: 12px; color: #A59E9E; text-decoration: underline ;">
+            <strong>http://www.hitwebcounter.com</strong>
+        </a>
+
+        <br />
+        <a href="http://info.flagcounter.com/Qnld"><img src="http://s06.flagcounter.com/count/Qnld/bg_675CFF/txt_000000/border_CCCCCC/columns_8/maxflags_250/viewers_3/labels_1/pageviews_1/flags_1/" alt="Flag Counter" border="0" /></a>
+
+        <div style="display:none;visibility:hidden;">
+            <a href="http://www.hitwebcounter.com/" target="_blank">
+                <img src="http://hitwebcounter.com/counter/counter.php?page=4628052&style=0025&nbdigits=9&type=ip&initCount=0" title="" Alt="" border="0" />
+            </a>
+
+            <a href="http://www.revolvermaps.com/?target=enlarge&amp;i=7n1oocnq4v0&amp;color=ff0000&amp;m=0"><img src="http://rh.revolvermaps.com/h/m/a/0/ff0000/235/0/7n1oocnq4v0.png" width="470" height="235" alt="Map" style="border: 0px;" /></a>
+        </div>
+</center>﻿
     <div id="about">
         <h2 class="title">DISCLAIMER:</h2>
         <p> Channeled information is not meant to be believed blindly. Sometimes information may bleed through from the conscious mind of the channel. It is possible that a negative Source may interfere. Apply your own discernment, take only what resonates and discard the rest. An answer to a question is meant for the person asking the question and you have the privilege of listening in because sometimes you can gain insights from the answer. However,  even though the circumstances may be similar, do not merely assume the answer applies to you.. This is not meant to replace seeing your doctor, dentist or any alternative practitioner. Some people get healings here, so you can be open to it.</p>
