--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2018-11-18@19:21:36 TMZ" />
+<meta http-equiv="last-modified" content="2018-11-19@20:24:48 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -117,7 +117,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : November 18, 2018
+                    Last Updated : November 19, 2018
                 </td>
 
                 <td>
@@ -208,12 +208,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Ce27XWmm7g">Mon BBS Call_2018-11-19.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/qhCPnlzrad">Sun_Gridhealing_2018-11-18.mp3 - <span>Sunday Planetary Helaing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/9qZEN0Ho9z">Mon BBS Call_2018-11-12.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/CNbTAM9u9k">Sun_Gridhealing_2018-11-11.mp3 - <span>Sunday Planetary Healing:Get On the Healing List</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/ylMkBTHFHy">Wed Q/A Call_2018-11-07.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/ZCgaDCwqeJ">Mon BBS Call_2018-11-05.mp3 - <span>Replay of Feb 2 2015</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Nzi62boQhy">Sun_Gridhealing_2018-11-04.mp3 - <span>Sunday Planetary Healing:Getting Into the Now</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/rGtFq8aRsV">Wed Q/A Call_2018-10-31.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
                        
 
@@ -396,6 +396,8 @@ November <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/ylMkBTHFHy">Wed Q/A Call_2018-11-07.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/CNbTAM9u9k">Sun_Gridhealing_2018-11-11.mp3 - <span>Sunday Planetary Healing:Get On the Healing List</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/9qZEN0Ho9z">Mon BBS Call_2018-11-12.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/qhCPnlzrad">Sun_Gridhealing_2018-11-18.mp3 - <span>Sunday Planetary Helaing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Ce27XWmm7g">Mon BBS Call_2018-11-19.mp3 - <span>BBS Call</span></a></h2>
 </div>
 <center>
         <br /><br />
