--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2018-11-22@12:16:36 TMZ" />
+<meta http-equiv="last-modified" content="2018-12-06@18:33:42 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -117,7 +117,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : November 22, 2018
+                    Last Updated : December 06, 2018
                 </td>
 
                 <td>
@@ -208,12 +208,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/4I2C4nTApp">Wed Q/A Call_2018-11-21.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Ce27XWmm7g">Mon BBS Call_2018-11-19.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/qhCPnlzrad">Sun_Gridhealing_2018-11-18.mp3 - <span>Sunday Planetary Helaing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/9qZEN0Ho9z">Mon BBS Call_2018-11-12.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/CNbTAM9u9k">Sun_Gridhealing_2018-11-11.mp3 - <span>Sunday Planetary Healing:Get On the Healing List</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/ylMkBTHFHy">Wed Q/A Call_2018-11-07.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/JqTNsA5uVk">Wed Q/A Call_2018-12-05.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/yQFyClms2s">Mon BBS Call_2018-12-03.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/9y7jCeNzhh">Sun_Gridhealing_2018-12-02.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/NEQAVWlecA">Wed Q/A Call_2018-11-28.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/2fNYe77x6o">Mon BBS Call_2018-11-26.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Y1vxjcfSpP">Sun_Gridhealing_2018-11-25.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 </div>
                        
 
@@ -387,7 +387,6 @@ October <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/bgacnguuZt">Mon BBS Call_2018-10-29.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/rGtFq8aRsV">Wed Q/A Call_2018-10-31.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
-<a id="link1"></a>
 
 <div id="xout">
 November <br> <br>
@@ -399,6 +398,17 @@ November <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/qhCPnlzrad">Sun_Gridhealing_2018-11-18.mp3 - <span>Sunday Planetary Helaing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/Ce27XWmm7g">Mon BBS Call_2018-11-19.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/4I2C4nTApp">Wed Q/A Call_2018-11-21.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Y1vxjcfSpP">Sun_Gridhealing_2018-11-25.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/2fNYe77x6o">Mon BBS Call_2018-11-26.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/NEQAVWlecA">Wed Q/A Call_2018-11-28.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+</div>
+<a id="link1"></a>
+
+<div id="xout">
+December <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/9y7jCeNzhh">Sun_Gridhealing_2018-12-02.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/yQFyClms2s">Mon BBS Call_2018-12-03.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/JqTNsA5uVk">Wed Q/A Call_2018-12-05.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
 <center>
         <br /><br />
