--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2018-12-06@18:33:42 TMZ" />
+<meta http-equiv="last-modified" content="2018-12-23@19:25:18 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -117,7 +117,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : December 06, 2018
+                    Last Updated : December 23, 2018
                 </td>
 
                 <td>
@@ -208,12 +208,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/JqTNsA5uVk">Wed Q/A Call_2018-12-05.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/yQFyClms2s">Mon BBS Call_2018-12-03.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/9y7jCeNzhh">Sun_Gridhealing_2018-12-02.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/NEQAVWlecA">Wed Q/A Call_2018-11-28.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/2fNYe77x6o">Mon BBS Call_2018-11-26.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Y1vxjcfSpP">Sun_Gridhealing_2018-11-25.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/eef1811ihg">Sun_Gridhealing_2018-12-23.mp3 - <span>Sunday Planetary Healing:Solving Some of the Mysteries of Ancient Egypt</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/FnMLlzNj3x">Wed Q/A Call_2018-12-19.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/mN1Xksv2Bz">Mon BBS Call_2018-12-17.mp3 - <span>Rewriting the Old Testament</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/KEgM8lexcs">Sun_Gridhealing_2018-12-16.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/qnwv8BJ7d5">Wed Q/A Call_2018-12-12.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/pV0CtX4nM3">Mon BBS Call_2018-12-10.mp3 - <span>Wynn and Carla Arguing, replay</span></a></h2>
 </div>
                        
 
@@ -409,6 +409,13 @@ December <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/9y7jCeNzhh">Sun_Gridhealing_2018-12-02.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/yQFyClms2s">Mon BBS Call_2018-12-03.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/JqTNsA5uVk">Wed Q/A Call_2018-12-05.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/qN8LY6kgZn">Sun_Gridhealing_2018-12-09.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/pV0CtX4nM3">Mon BBS Call_2018-12-10.mp3 - <span>Wynn and Carla Arguing, replay</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/qnwv8BJ7d5">Wed Q/A Call_2018-12-12.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/KEgM8lexcs">Sun_Gridhealing_2018-12-16.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/mN1Xksv2Bz">Mon BBS Call_2018-12-17.mp3 - <span>Rewriting the Old Testament</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/FnMLlzNj3x">Wed Q/A Call_2018-12-19.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/eef1811ihg">Sun_Gridhealing_2018-12-23.mp3 - <span>Sunday Planetary Healing:Solving Some of the Mysteries of Ancient Egypt</span></a></h2>
 </div>
 <center>
         <br /><br />
