--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2018-12-31@17:45:48 TMZ" />
+<meta http-equiv="last-modified" content="2019-01-01@17:55:30 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -117,7 +117,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : December 31, 2018
+                    Last Updated : January 01, 2019
                 </td>
 
                 <td>
@@ -208,12 +208,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/ihpVrWTutj">Mon BBS Call_2018-12-31.mp3 - <span>How to Fix Your Karma!! A New Years Resolution for Everybody</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/zavfFGVDJ7">Sun_Gridhealing_2018-12-30.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/HyuvhkEnu1">Wed Q/A Call_2018-12-26.mp3 - <span>questions+++Whole Planet Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/pAmpsd2Vqt">Mon BBS Call_2018-12-24.mp3 - <span>Replay of call on Earth Changes</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/eef1811ihg">Sun_Gridhealing_2018-12-23.mp3 - <span>Sunday Planetary Healing:Solving Some of the Mysteries of Ancient Egypt</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/FnMLlzNj3x">Wed Q/A Call_2018-12-19.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/mN1Xksv2Bz">Mon BBS Call_2018-12-17.mp3 - <span>Rewriting the Old Testament</span></a></h2>
 </div>
                        
 
@@ -419,6 +419,7 @@ December <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/pAmpsd2Vqt">Mon BBS Call_2018-12-24.mp3 - <span>Replay of call on Earth Changes</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/HyuvhkEnu1">Wed Q/A Call_2018-12-26.mp3 - <span>questions+++Whole Planet Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/zavfFGVDJ7">Sun_Gridhealing_2018-12-30.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/ihpVrWTutj">Mon BBS Call_2018-12-31.mp3 - <span>How to Fix Your Karma!! A New Years Resolution for Everybody</span></a></h2>
 </div>
 <center>
         <br /><br />
