--- a/2016.html
+++ b/2016.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2018-11-18@15:07:15 TMZ" />
+<meta http-equiv="last-modified" content="2019-01-04@21:48:26 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -26,7 +26,8 @@
             <a href="#"
                class="dropbtn">Archives</a>
             <div class="dropdown-content">
-                <a href="index.html">2018</a>
+                <a href="index.html">2019</a>
+                <a href="2018.html">2018</a>
                 <a href="2017.html">2017</a>
                 <a href="2016.html">2016</a>
                 <a href="2015.html">2015</a>
@@ -81,7 +82,7 @@
 	</div>
 
 <div id="cout">
-<td>Last Updated; November 18, 2018</td>
+<td>Last Updated; January 04, 2019</td>
 <br>
 <br>
 <h5>
