--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="last-modified" content="2019-01-24@13:03:19 TMZ" />
+<meta http-equiv="last-modified" content="2019-01-31@10:37:04 TMZ" />
 <title>Intelligent-Infinity</title>
 <link rel="shortcut icon" href="favicon.ico" >
 
@@ -118,7 +118,7 @@
         <table width="100%" border="0">
             <tr>
                 <td>
-                    Last Updated : January 24, 2019
+                    Last Updated : January 31, 2019
                 </td>
 
                 <td>
@@ -209,12 +209,12 @@
         </table>
     </div>
 <div id="xout"> Most recent calls (in descending order) <br> <br>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/g0UNK3OKJ5">Wed Q/A Call_2019-01-30.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/EddERxDrIn">Mon BBS Call_2019-01-28.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Q3FI14sGcd">Sun_Gridhealing_2019-01-27.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/3hb3sJXr7c">Wed Q/A Call_2019-01-23.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/as26Sv0Gzy">Mon BBS Call_2019-01-21.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/O6xioHAi9r">Sun_Gridhealing_2019-01-20.mp3 - <span>Sunday Planetary Healing:Root Races - Ancient Aliens</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/0oa1ePPnDw">Wed Q/A Call_2019-01-16.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/3aFxojlZ4H">Mon BBS Call_2019-01-14.mp3 - <span>BBS Call</span></a></h2>
-<h2><a href ="https://intelligentinfinity.egnyte.com/dl/C9sWr9ja6N">Sun_Gridhealing_2019-01-13.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
 </div>
                        
 <a id="link1"></a>
@@ -231,6 +231,9 @@ January <br> <br>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/O6xioHAi9r">Sun_Gridhealing_2019-01-20.mp3 - <span>Sunday Planetary Healing:Root Races - Ancient Aliens</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/as26Sv0Gzy">Mon BBS Call_2019-01-21.mp3 - <span>BBS Call</span></a></h2>
 <h2><a href ="https://intelligentinfinity.egnyte.com/dl/3hb3sJXr7c">Wed Q/A Call_2019-01-23.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/Q3FI14sGcd">Sun_Gridhealing_2019-01-27.mp3 - <span>Sunday Planetary Healing:Sunday Grid Healing</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/EddERxDrIn">Mon BBS Call_2019-01-28.mp3 - <span>BBS Call</span></a></h2>
+<h2><a href ="https://intelligentinfinity.egnyte.com/dl/g0UNK3OKJ5">Wed Q/A Call_2019-01-30.mp3 - <span>Questions+++Whole Planet Healing</span></a></h2>
 </div>
 <center>
         <br /><br />
